--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p><span>Telephone: </span><a href="tel: +2348055228054">+234 805 522 8054</a></p>
             <p><span>Address: </span>16, Awolowo Road, Ikoyi, Lagos, Nigeria.</p>
         </div>
+        <div class="seperator"></div>
         <div class="construction">
             <h1>Website Under Construction</h1>
         </div>
