--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
 
 </head>
 <body>
-    <div class="container">
-        <div class="logo">
-            <img src="logo.png" alt="Emigrate_consulting logo" class="img-fluid">
+    <main>
+        <div class="container">
+            <div class="logo">
+                <img src="logo.png" alt="Emigrate_consulting logo" class="img-fluid">
+            </div>
+            <div class="welcome">
+                <p>Welcome to Emigrate Consulting a leading immigration firm in Lagos, Nigeria led by US-trained lawyers.</p>
+            </div>
+            <div class="contact">
+                <p><span>Email: </span><a href="mailto: info@emigrateconsulting.com">info@emigrateconsulting.com</a></p>
+                <p><span>Telephone: </span><a href="tel: +2348055228054">+234 805 522 8054</a></p>
+                <p><span>Address: </span>16, Awolowo Road, Ikoyi, Lagos, Nigeria.</p>
+            </div>
+            <div class="seperator"></div>
+            <div class="construction">
+                <h1>Website Under Construction</h1>
+            </div>
         </div>
-        <div class="welcome">
-            <p>Welcome to Emigrate Consulting a leading immigration firm in Lagos, Nigeria led by US-trained lawyers.</p>
-        </div>
-        <div class="contact">
-            <p><span>Email: </span><a href="mailto: info@emigrateconsulting.com">info@emigrateconsulting.com</a></p>
-            <p><span>Telephone: </span><a href="tel: +2348055228054">+234 805 522 8054</a></p>
-            <p><span>Address: </span>16, Awolowo Road, Ikoyi, Lagos, Nigeria.</p>
-        </div>
-        <div class="seperator"></div>
-        <div class="construction">
-            <h1>Website Under Construction</h1>
-        </div>
-    </div>
+    </main>
+    
 </body>
 </html>
