Load Montserrat google font

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
         </div>
     </main>
     
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
 </body>
 </html>
