Make minor tweaks

--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Emigrate Consulting - Leading immigration firm in Lagos, Nigeria.</title>
+    <title>Welcome to Emigrate Consulting – A leading immigration firm in Lagos, Nigeria led by US-trained lawyers.</title>
+    <link href="favicon-16.png" rel="icon" type="image/png">
+    <link href="favicon-32.png" rel="apple-touch-icon">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <main>
+    <main role="main">
         <div class="container">
             <div class="logo">
                 <img src="logo.png" alt="Emigrate_consulting logo" class="img-fluid">
             </div>
             <div class="welcome">
-                <p>Welcome to Emigrate Consulting a leading immigration firm in Lagos, Nigeria led by US-trained lawyers.</p>
+                <p>Welcome to Emigrate Consulting – A leading immigration firm in Lagos, Nigeria led by US-trained lawyers.</p>
             </div>
+            <div class="seperator"></div>
             <div class="contact">
                 <p><span>Email: </span><a href="mailto: info@emigrateconsulting.com">info@emigrateconsulting.com</a></p>
                 <p><span>Telephone: </span><a href="tel: +2348055228054">+234 805 522 8054</a></p>
